Second time commit

--- a/static/CSS/admin/base.css
+++ b/static/CSS/admin/base.css
@@ -74,6 +74,16 @@ body{
 	z-index: 5;
 }
 
+.nav_dropdown5{
+    font: monospace 8px;
+	position: absolute;
+	display: none;
+	width: 150px !important;
+	padding: 0px 0px;
+	background-color: #2f4f4f;
+	z-index: 5;
+}
+
 .nav_dropdown ul li{
 	list-style-type: none;
 	padding: 3px 20px;
