--- a/template/base_login.html
+++ b/template/base_login.html
@@ -87,24 +87,18 @@
 				<a href="/courses/" style="text-decoration:none; color:white;"><i class="fa fa-mortar-board" style="font-size:18px;color:white"></i> <strong> COURSES</strong></a>
 			</div>
 		</div>
-		<div class="nav_o nav_o3">
+		<div class="nav_o nav_o6">
 			<div class="nav_oh">
-				<a href="/gallery/" style="text-decoration:none; color:white;"><i class="fa fa-camera-retro" style="font-size:18px;color:white"></i>
-<strong> GALLERY </strong></a>
+				<a href="/accounts/schedule/" style="text-decoration:none; color:white;"><i class="fa fa-mortar-board" style="font-size:18px;color:white"></i> <strong> SCHEDULE</strong></a>
 			</div>
 		</div>
-		<div class="nav_o nav_o4">
+
+		<div class="nav_o nav_o7">
 			<div class="nav_oh">
-				<i class="fa fa-tags" style="font-size:18px;color:white"></i><strong> ABOUT US </strong>
-			</div>
-			<div class="nav_dropdown nav_dropdown4">
-				<ul>
-					<li> <i class="fa fa-balance-scale" style="font-size:18px;color:white"></i>&nbsp&nbsp PREV. RESULTS </li>
-					<a href="/ambassadors/" style="text-decoration:none; color:white;"><li><i class="fa fa-user-circle-o" style="font-size:18px;color:whte"></i>&nbsp&nbsp&nbsp OUR AMBASSADORS </li> </a>
-					<li> <i class="fa fa-handshake-o" style="font-size:18px;color:white"></i>&nbsp&nbsp CONTACT US </li>
-				</ul>
+				<a href="/accounts/shome/" style="text-decoration:none; color:white;"><i class="fa fa-mortar-board" style="font-size:18px;color:white"></i> <strong> MyHOME </strong></a>
 			</div>
 		</div>
+
 		<div class="nav_o nav_o5">
 			<div class="nav_oh">
 				<a href="/accounts/logout/" id="signOut" style="text-decoration:none; color:white;"><i class="fa fa-sign-out" style="font-size:18px;color:white"></i>&nbsp&nbsp signOut</a>
