--- a/template/accounts/register.html
+++ b/template/accounts/register.html
@@ -16,6 +16,21 @@
 {% endblock %}
 
 {% block write_js %}
+
+	document.addEventListener("DOMContentLoaded", function() {
+    var elements = document.getElementsByClassName("mob");
+    for (var i = 0; i < elements.length; i++) {
+        elements[i].oninvalid = function(e) {
+            e.target.setCustomValidity("");
+            if (!e.target.validity.valid) {
+                e.target.setCustomValidity("The phone number is invalid");
+            }
+        };
+        elements[i].oninput = function(e) {
+            e.target.setCustomValidity("");
+        };
+    }
+})
 	
 {% endblock  %}
 
@@ -48,15 +63,15 @@
 			<div class="right-content">
 				<input type="text" name="f_name" placeholder="First Name" class="fst">
 				<input type="text" name="l_name" placeholder="Last Name" class="s-input">
-				<input type="text" name="dob" placeholder="Date of birth" class="s-input">
+				<input type="date" name="dob" placeholder="Date of birth" class="s-input">
 				<input type="text" name="Fa_name" placeholder="Father's Name" class="s-input">
 				<input type="text" name="Mo_name" placeholder="Mother's Name" class="s-input">
-				<input type="text" name="Mob1" placeholder="Mobile Number" class="s-input">
-				<input type="text" name="Mob2" placeholder="Alternate Mobile Number" class="s-input">
+				<input type="number" min="1000000000" max="9999999999" name="Mob1" placeholder="Mobile Number" class="s-input mob">
+				<input type="number" min="1000000000" max="9999999999" name="Mob2" placeholder="Alternate Mobile Number" class="s-input mob">
 				<input type="password" name="pswd1" placeholder="Password" class="s-input">
 				<input type="password" name="pswd2" placeholder="Re-enter Password" class="s-input">
 				<input type="text" name="town_vil" placeholder="Town Village" class="s-input">
-				<input type="text" name="zip_code" placeholder="Pin Code" class="s-input">
+				<input type="number" name="zip_code" placeholder="Pin Code" class="s-input">
 				<textarea  name="addr" placeholder="Address" class="s-input-addr" > </textarea>
 				<input type="file" placeholder="Picture" name="dp" class="s-input-addr" />
 			</div>
